tests/rosetta/out/Java/arbitrary-precision-integers-included-.error
javac error: exit status 1
/tmp/TestMochiToJavaarbitrary-precision-integers-included-1097706590/001/ArbitraryPrecisionIntegersIncluded.java:6: error: cannot find symbol
    static bigint base = 5;
           ^
  symbol:   class bigint
  location: class ArbitraryPrecisionIntegersIncluded
/tmp/TestMochiToJavaarbitrary-precision-integers-included-1097706590/001/ArbitraryPrecisionIntegersIncluded.java:20: error: cannot find symbol
    static bigint pow_big(bigint base, int exp) {
                          ^
  symbol:   class bigint
  location: class ArbitraryPrecisionIntegersIncluded
/tmp/TestMochiToJavaarbitrary-precision-integers-included-1097706590/001/ArbitraryPrecisionIntegersIncluded.java:20: error: cannot find symbol
    static bigint pow_big(bigint base, int exp) {
           ^
  symbol:   class bigint
  location: class ArbitraryPrecisionIntegersIncluded
/tmp/TestMochiToJavaarbitrary-precision-integers-included-1097706590/001/ArbitraryPrecisionIntegersIncluded.java:16: error: incompatible types: int cannot be converted to String
            e = (int)(Integer.parseInt((e / 2)));
                                          ^
/tmp/TestMochiToJavaarbitrary-precision-integers-included-1097706590/001/ArbitraryPrecisionIntegersIncluded.java:21: error: cannot find symbol
        bigint result = 1;
        ^
  symbol:   class bigint
  location: class ArbitraryPrecisionIntegersIncluded
/tmp/TestMochiToJavaarbitrary-precision-integers-included-1097706590/001/ArbitraryPrecisionIntegersIncluded.java:22: error: cannot find symbol
        bigint b = base;
        ^
  symbol:   class bigint
  location: class ArbitraryPrecisionIntegersIncluded
/tmp/TestMochiToJavaarbitrary-precision-integers-included-1097706590/001/ArbitraryPrecisionIntegersIncluded.java:29: error: incompatible types: int cannot be converted to String
            e = (int)(Integer.parseInt((e / 2)));
                                          ^
/tmp/TestMochiToJavaarbitrary-precision-integers-included-1097706590/001/ArbitraryPrecisionIntegersIncluded.java:36: error: cannot find symbol
    bigint x = pow_big(base, e2);
    ^
  symbol:   class bigint
  location: class ArbitraryPrecisionIntegersIncluded
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
8 errors
